--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -4,5 +4,8 @@
     <string name="app_name">IITC mobile</string>
     <string name="action_settings">Settings</string>
     <string name="reload">Reload IITC</string>
+    <string name="version">Print Version</string>
+    <string name="cache_clear">Clear Cache</string>
+    <string name="locate">Get Location</string>
 
 </resources>
