added preferences activity to iitcm...adds possibility to force desktop mode

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -7,5 +7,8 @@
     <string name="version">Print Version</string>
     <string name="cache_clear">Clear Cache</string>
     <string name="locate">Get Location</string>
+    <string name="build_version">Build Version</string>
+    
+    <string name="pref_force_desktop">Force desktop mode</string>
 
 </resources>
