--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -10,5 +10,6 @@
     <string name="build_version">Build Version</string>
     
     <string name="pref_force_desktop">Force desktop mode</string>
+    <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
 
 </resources>
