--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -14,7 +14,7 @@
     <string name="about">About</string>
     
     <string name="pref_about_title">About IITC Mobile</string>
-    <!-- Use CDATA to prevent android from parsin html tags....we are doing this with Html.fromHtml() -->
+    <!-- Use CDATA to prevent android from parsing html tags....we are doing this with Html.fromHtml() -->
     <string name="pref_about_msg">
         <![CDATA[<big><b>Ingress Intel Total Conversion Mobile</b></big><br><br>
         <b>by <a href="https://github.com/leCradle">cradle</a></b><br><br>
