--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -36,6 +36,8 @@
     <string name="pref_plugins_title">Available plugins</string>
     <string name="pref_force_desktop">Force desktop mode</string>
     <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
+    <string name="pref_user_loc">Display user location</string>
+    <string name="pref_user_loc_sum">Show users position on map</string>
     <string name="pref_developer_options">Developer options</string>
     <string name="pref_select_iitc">IITC source</string>
 
