added new iitc icon to mobile (see #102)

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -18,7 +18,7 @@
     <string name="pref_about_msg">
         <![CDATA[<big><b>Ingress Intel Total Conversion Mobile</b></big><br><br>
         <b>by <a href="https://github.com/leCradle">cradle</a></b><br><br>
-        <b>Icon by <a href="https://twitter.com/machtwerk">machtwerk</a></b><br><br>
+        <b>Icon by <a href="http://www.ludolab.net">Giuseppe Lucido</a></b><br><br>
         IITC Mobile is an optimized mobile browser for the
         Ingress Intel Total Conversion (IITC) userscript by <a href="https://github.com/breunigs"><b>breunigs</b></a>.
         After Niantic asked the main developer to shut down his github project, development
