--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -32,6 +32,7 @@
     </string>
 
     <string name="pref_ui_cat">UI</string>
+    <string name="pref_misc_cat">Misc</string>
     <string name="pref_plugins">Plugins</string>
     <string name="pref_plugins_title">Available plugins</string>
     <string name="pref_force_desktop">Force desktop mode</string>
