removed old github link from about dialog. It does not exists anymore...

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -25,10 +25,8 @@
         is continued on a fork of <a href="https://github.com/jonatkins"><b>jonatkins</b></a>.<br><br>
         <b>Website:</b><br>
         <a href="http://iitc.jonatkins.com/">http://iitc.jonatkins.com/</a><br><br>
-        <b>Fork github:</b><br>
-        <a href="https://github.com/jonatkins/ingress-intel-total-conversion">https://github.com/jonatkins/ingress-intel-total-conversion</a><br><br>
-        <b>Old github:</b><br>
-        <a href="https://github.com/breunigs/ingress-intel-total-conversion">https://github.com/breunigs/ingress-intel-total-conversion</a>]]>
+        <b>IITC on Github:</b><br>
+        <a href="https://github.com/jonatkins/ingress-intel-total-conversion">https://github.com/jonatkins/ingress-intel-total-conversion</a>]]>
     </string>
 
     <string name="pref_ui_cat">UI</string>
