--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -37,6 +37,8 @@
     <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
     <string name="pref_user_loc">Display user location</string>
     <string name="pref_user_loc_sum">Show users position on map</string>
+    <string name="pref_force_https">Force https</string>
+    <string name="pref_force_https_sum">Disabling may improve performance</string>
     <string name="pref_developer_options">Developer options</string>
 	<string name="pref_enable_dev_mode">Enable developer mode</string>
 	<string name="pref_enable_dev_mode_sum">If enabled, all IITC sources will be loaded from external storage of the Android device.
