Fixed a focus bug with locate button and added Exit menu option.

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -53,4 +53,5 @@
     <string name="menu_public">Public</string>
     <string name="menu_faction">Faction</string>
     <string name="menu_info">Info</string>
+    <string name="menu_exit">Exit</string>
 </resources>
