--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -34,6 +34,8 @@
     <string name="pref_misc_cat">Misc</string>
     <string name="pref_plugins">Plugins</string>
     <string name="pref_plugins_title">Available plugins</string>
+    <string name="pref_user_zoom">Show zoom control</string>
+    <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
     <string name="pref_user_loc">Display user location</string>
     <string name="pref_user_loc_sum">Show users position on map</string>
     <string name="pref_force_https">Force https</string>
