--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -34,10 +34,12 @@
     <string name="pref_misc_cat">Misc</string>
     <string name="pref_plugins">Plugins</string>
     <string name="pref_plugins_title">Available plugins</string>
-    <string name="pref_user_zoom">Show zoom control</string>
-    <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
     <string name="pref_user_loc">Display user location</string>
     <string name="pref_user_loc_sum">Show users position on map</string>
+    <string name="pref_user_zoom">Show zoom control</string>
+    <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
+    <string name="pref_fullscreen_actionbar">Hide Action Bar in fullscreen mode</string>
+    <string name="pref_fullscreen_actionbar_sum">Nice for screenshots. Note: IITCM cannot be controlled without Action Bar.</string>
     <string name="pref_force_https">Force https</string>
     <string name="pref_force_https_sum">Disabling may improve performance</string>
     <string name="pref_developer_options">Developer options</string>
