--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -56,4 +56,5 @@
     <string name="menu_faction">Faction</string>
     <string name="menu_info">Info</string>
     <string name="menu_debug">Debug</string>
+    <string name="choose_account_to_login">Choose account to login</string>
 </resources>
