--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">IITC mobile</string>
+    <string name="app_name">IITC Mobile</string>
     <string name="action_settings">Settings</string>
     <string name="reload">Reload IITC</string>
     <string name="version">Print Version</string>
@@ -49,7 +49,6 @@
     <string name="pref_select_iitc">IITC source</string>
 
     <string name="menu_chat">Chat</string>
-    <string name="menu_map">Map</string>
     <string name="menu_full">Full</string>
     <string name="menu_compact">Compact</string>
     <string name="menu_public">Public</string>
