--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -32,7 +32,7 @@
 
     <string name="pref_ui_cat">UI</string>
     <string name="pref_misc_cat">Misc</string>
-    <string name="pref_plugins">Plugins</string>
+    <string name="pref_plugins">IITC Plugins</string>
     <string name="pref_plugins_title">Available plugins</string>
     <string name="pref_user_loc">Display user location</string>
     <string name="pref_user_loc_sum">Show users position on map</string>
