--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -32,8 +32,8 @@
          - a place to ask for help and discuss with other users.<br><br>
         <b>Developers:</b><br>
         <a href="https://github.com/jonatkins/ingress-intel-total-conversion">IITC on Github</a><br><br>
-        <b>Licence:</b><br>
-        Copyright © 2013 Stefan Breunig, Philipp Schäfer, Jon Atkins and others<br><br>
+        <b>IITC Licence:</b><br>
+        Copyright © 2013 Stefan Breunig, Jon Atkins, Philipp Schäfer and others<br><br>
 
         Permission to use, copy, modify, and/or distribute this software for
         any purpose with or without fee is hereby granted, provided that the
