--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -2,6 +2,10 @@
 <resources>
 
     <string name="app_name">IITC Mobile</string>
+    <string name="activity_settings">IITC Mobile Settings</string>
+    <string name="activity_plugins">IITC Plugins</string>
+    <string name="activity_share">Share using…</string>
+    <string name="activity_share_to_clipboard">Copy to clipboard</string>
     <string name="action_settings">Settings</string>
     <string name="reload">Reload IITC</string>
     <string name="version">Print Version</string>
@@ -32,8 +36,8 @@
          - a place to ask for help and discuss with other users.<br><br>
         <b>Developers:</b><br>
         <a href="https://github.com/jonatkins/ingress-intel-total-conversion">IITC on Github</a><br><br>
-        <b>Licence:</b><br>
-        Copyright © 2013 Stefan Breunig, Philipp Schäfer, Jon Atkins and others<br><br>
+        <b>IITC Licence:</b><br>
+        Copyright © 2013 Stefan Breunig, Jon Atkins, Philipp Schäfer and others<br><br>
 
         Permission to use, copy, modify, and/or distribute this software for
         any purpose with or without fee is hereby granted, provided that the
@@ -67,9 +71,12 @@
     <string name="pref_press_twice_to_exit">Press back button twice to exit</string>
     <string name="pref_press_twice_to_exit_sum">Avoids accidental exits</string>
     <string name="pref_developer_options">Developer options</string>
-	<string name="pref_enable_dev_mode">Enable developer mode</string>
-	<string name="pref_enable_dev_mode_sum">If enabled, all IITC sources will be loaded from external storage of the Android device.
-	    Please copy all sources from $IITC_folder/build/mobile/ to /sdcard/IITC_Mobile/dev/.</string>
+    <string name="pref_enable_dev_mode">Enable developer mode</string>
+    <string name="pref_enable_dev_mode_sum">If enabled, all IITC sources will be loaded from external storage of the Android device.
+      Please copy all sources from $IITC_folder/build/mobile/ to /sdcard/IITC_Mobile/dev/.</string>
+    <string name="pref_advanced_menu">Display advanced menu</string>
+    <string name="pref_advanced_menu_sum">In addition to the default IITC buttons the advanced menu
+        contains a debug pane plus an option to clear cookies</string>
     <string name="pref_disable_splash">Disable Splash Screen</string>
     <string name="pref_select_iitc">IITC source</string>
     <string name="pref_select_iitc_sum">Load IITC main script from url or use local script. Currently used source:</string>
@@ -81,6 +88,7 @@
     <string name="menu_faction">Faction</string>
     <string name="menu_info">Info</string>
     <string name="menu_debug">Debug</string>
+    <string name="menu_clear_cookies">Clear Cookies</string>
     <string name="menu_search">Search</string>
     <string name="choose_account_to_login">Choose account to login</string>
     <string name="login_failed">Login failed.</string>
@@ -95,4 +103,5 @@
     <string name="base_layers">Base Layers</string>
     <string name="overlay_layers">Overlay Layers</string>
     <string name="toggle_layer_selection">Deselect/Select all</string>
+
 </resources>
