--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -7,6 +7,8 @@
     <string name="activity_share">Share using…</string>
     <string name="activity_share_to_clipboard">Copy to clipboard</string>
     <string name="action_settings">Settings</string>
+    <string name="drawer_open">Show navigation menu</string>
+    <string name="drawer_close">Hide navigation menu</string>
     <string name="reload">Reload IITC</string>
     <string name="version">Print Version</string>
     <string name="toggle_fullscreen">Toggle fullscreen</string>
