--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -63,7 +63,9 @@
         to evoke the Layer Drawer]]>
     </string>
     <string name="notice_info">
-        <![CDATA[Hint: The info screen will open if you tap and hold a portal for a second.]]>
+        <![CDATA[Hint: Alternative ways to open the info screen:<br><br>
+        • tap and hold a portal for a second<br>
+        • tap on the left half of the status bar]]>
     </string>
     
     <string name="pref_ui_cat">UI</string>
