--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -70,6 +70,8 @@
     
     <string name="pref_ui_cat">UI</string>
     <string name="pref_misc_cat">Misc</string>
+    <string name="pref_developer_options_cat">Developer options</string>
+    <string name="pref_tweaks_cat">Tweaks</string>
     <string name="pref_plugins">IITC Plugins</string>
     <string name="pref_plugins_title">Available plugins</string>
     <string name="pref_user_loc">Display user location</string>
@@ -84,7 +86,6 @@
     <string name="pref_force_https_sum">Disabling may improve performance</string>
     <string name="pref_press_twice_to_exit">Press back button twice to exit</string>
     <string name="pref_press_twice_to_exit_sum">Avoids accidental exits</string>
-    <string name="pref_developer_options_cat">Developer options</string>
     <string name="pref_advanced_options">Advanced settings</string>
     <string name="pref_enable_dev_mode">Enable developer mode</string>
     <string name="pref_enable_dev_mode_sum">If enabled, all IITC sources will be loaded from external storage of the Android device.
