--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -79,14 +79,16 @@
     <string name="pref_user_loc_sum">Show users position on map</string>
     <string name="pref_user_zoom">Show zoom control</string>
     <string name="pref_user_zoom_sum">Shows +/- buttons even on multitouch capable devices.</string>
-    <string name="pref_fullscreen_actionbar">Hide Action Bar in fullscreen mode</string>
-    <string name="pref_fullscreen_actionbar_sum">Nice for screenshots. Note: IITCm can still be controlled via the Navigation Drawers</string>
+    <string name="pref_fullscreen">Hide in fullscreen mode</string>
+    <string name="pref_fullscreen_sum">Which elements should be hidden in fullscreen mode.
+        Note: IITCm can still be controlled via the Navigation Drawers</string>
     <string name="pref_force_desktop">Force desktop mode</string>
     <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
     <string name="pref_force_https">Force https</string>
     <string name="pref_force_https_sum">Disabling may improve performance</string>
     <string name="pref_external_storage">Move cache to external storage</string>
-    <string name="pref_external_storage_sum">Restart required! Write cache to sdCard. Saves internal storage. External storage has to be mounted.</string>
+    <string name="pref_external_storage_sum">Restart required! Write cache to sdCard. Saves internal storage.
+        External storage has to be mounted.</string>
     <string name="pref_press_twice_to_exit">Press back button twice to exit</string>
     <string name="pref_press_twice_to_exit_sum">Avoids accidental exits</string>
     <string name="pref_advanced_options">Advanced settings</string>
@@ -106,6 +108,20 @@
     <string name="pref_caching">Aggressive Caching</string>
     <string name="pref_caching_sum">Prefer cached values even if they are expired…saves traffic but
         may result in login issues</string>
+
+    <string-array name="pref_hide_fullscreen">
+        <item>System Bar</item>
+        <item>Action Bar</item>
+        <item>IITC Status Bar</item>
+        <item>Navigation Bar</item>
+    </string-array>
+    <string-array name="pref_hide_fullscreen_vals">
+        <item>2</item>
+        <item>4</item>
+        <item>8</item>
+        <item>16</item>
+    </string-array>
+
     <string-array name="pref_caching_array">
         <item>Always</item>
         <item>Mobile data only (default)</item>
