--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -68,6 +68,12 @@
         • tap and hold a portal for a second<br>
         • tap on the left half of the status bar]]>
     </string>
+    <string name="notice_panes">
+        <![CDATA[Hint:<br><br>
+        Some plugins (e.g. portals list and bookmarks) now appear in the navigation drawer for quick access.<br>
+        They won\'t appear in the info pane any more.<br><br>
+        Swipe from the left edge of your screen (or click the app icon) to seem them.]]>
+    </string>
 
     <string name="pref_ui_cat">UI</string>
     <string name="pref_misc_cat">Misc</string>
