--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -148,6 +148,7 @@
     <string name="search_hint">Search Locations</string>
     <string name="intent_error">Address could not be opened</string>
     <string name="msg_copied">Copied to clipboard…</string>
+    <string name="notice_do_not_show_again">Do not show again</string>
 
     <string name="tab_map">Map</string>
     <string name="tab_share">Share</string>
