--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -97,8 +97,8 @@
     <string name="pref_force_desktop_sum">Nice for tablets, looks awful on smartphones</string>
     <string name="pref_force_https">Force https</string>
     <string name="pref_force_https_sum">Disabling may improve performance</string>
-    <string name="pref_external_storage">Move cache to external storage</string>
-    <string name="pref_external_storage_sum">Restart required! Write cache to sdCard. Saves internal storage.
+    <string name="pref_external_storage">Move tiles cache to external storage</string>
+    <string name="pref_external_storage_sum">Restart required! Write cache to sdCard.
         External storage has to be mounted.</string>
     <string name="pref_press_twice_to_exit">Press back button twice to exit</string>
     <string name="pref_press_twice_to_exit_sum">Avoids accidental exits</string>
@@ -116,10 +116,6 @@
     <string name="pref_select_iitc">IITC source</string>
     <string name="pref_select_iitc_sum">Load IITC main script from url or use local script. Currently used source:</string>
 
-    <string name="pref_caching">Aggressive Caching</string>
-    <string name="pref_caching_sum">Prefer cached values even if they are expired…saves traffic but
-        may result in login issues</string>
-
     <string-array name="pref_hide_fullscreen">
         <item>System Bar</item>
         <item>Action Bar</item>
@@ -131,17 +127,6 @@
         <item>4</item>
         <item>8</item>
         <item>16</item>
-    </string-array>
-
-    <string-array name="pref_caching_array">
-        <item>Always</item>
-        <item>Mobile data only (default)</item>
-        <item>Never</item>
-    </string-array>
-    <string-array name="pref_caching_array_vals">
-        <item>0</item>
-        <item>1</item>
-        <item>2</item>
     </string-array>
 
     <string name="menu_clear_cookies">Clear Cookies</string>
