--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -16,6 +16,8 @@
     <string name="locate">Get Location</string>
     <string name="local">local</string>
     <string name="close">Close</string>
+    <string name="download_description">Downloading latest intel package...</string>
+
     <string name="pref_about_title">About IITC Mobile</string>
     <!-- Use CDATA to prevent android from parsing html tags....we are doing this with Html.fromHtml() -->
     <string name="pref_about_text">
