--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -2,6 +2,7 @@
 <resources>
 
     <string name="app_name">IITC Mobile</string>
+    <string name="toggle_map">Toggle map visibility</string>
     <string name="activity_settings">IITC Mobile Settings</string>
     <string name="activity_plugins">IITC Plugins</string>
     <string name="activity_share">Share using…</string>
@@ -140,6 +141,7 @@
 
     <string name="menu_clear_cookies">Clear Cookies</string>
     <string name="menu_search">Search</string>
+    <string name="menu_debug">Debug</string>
     <string name="choose_account_to_login">Choose account to login</string>
     <string name="login_failed">Login failed.</string>
     <string name="search_hint">Search Locations</string>
