Enable running JS from debug interface

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -3,6 +3,7 @@
 
     <string name="app_name">IITC Mobile</string>
     <string name="toggle_map">Toggle map visibility</string>
+    <string name="debug_run">Run</string>
     <string name="activity_settings">IITC Mobile Settings</string>
     <string name="activity_plugins">IITC Plugins</string>
     <string name="activity_share">Share using…</string>
