--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -86,9 +86,8 @@
     <string name="notice_extplugins">
         <![CDATA[Hint:<br><br>
         IITC Mobile is able to load external plugins too!<br><br>
-        • create <b>%1$s</b><br>
-        • move *.user.js files there<br>
-        • plugins should be listed above the official plugins]]>
+        Add them by clicking the (+) icon at the top right.
+        The plugin files have to end with \'.user.js\' and are copied to <b>%1$s</b><br>]]>
     </string>
     <string name="notice_sharing">
         <![CDATA[With <em>Share portal</em> you can:<br>
@@ -162,6 +161,7 @@
     <string name="menu_clear_cookies">Clear Cookies</string>
     <string name="menu_search">Search</string>
     <string name="menu_debug">Debug</string>
+    <string name="menu_plugins_add">Add external plugins</string>
     <string name="choose_account_to_login">Choose account to login</string>
     <string name="login_failed">Login failed.</string>
     <string name="search_hint">Search Locations</string>
