--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -179,7 +179,9 @@
 
     <string name="install_dialog_top">Install external plugin?</string>
     <string name="install_dialog_msg">
-        IITCm was requested to install the following plugin:\n\n%1$s\n\nDo you want to proceed?
+        <![CDATA[IITCm was requested to install the following javascript file:<br><br>%1$s<br><br>
+        <b>Be careful:</b> Javascript from external sources may contain harmful code (spyware etc.)!<br><br>
+        Are you sure you want to proceed?]]>
     </string>
 
 </resources>
