[IITCm] new feature: share a screenshot of the current view

--- a/mobile/res/values/strings.xml
+++ b/mobile/res/values/strings.xml
@@ -161,6 +161,7 @@
     <string name="menu_clear_cookies">Clear Cookies</string>
     <string name="menu_search">Search</string>
     <string name="menu_debug">Debug</string>
+    <string name="menu_send_screenshot">Send screenshot</string>
     <string name="menu_plugins_add">Add external plugins</string>
     <string name="choose_account_to_login">Choose account to login</string>
     <string name="login_failed">Login failed.</string>
